fix overflow in tables

--- a/style.css
+++ b/style.css
@@ -466,6 +466,7 @@ figure.table-figure {
 	display: flex;
 	flex-direction: column;
 	margin: 2em 0;
+	overflow-x: auto;
 }
 
 figure.table-figure .table-styled {
